<resources>
    <string name="app_name">Task Manager</string>

    <!-- LISTA DE USUARIOS -->
    <string name="user_list_toolbar_title">Seleccione un usuario</string>

    <!-- REGISTRO -->
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="text_signin">Bienvenido!</string>
    <string name="text_signin2">Para disfrutar de todas las funciones de la aplicación cree una cuenta</string>
    <string name="text_signin3">¿Ya tiene una cuenta?</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_repeat">Repita la contraseña</string>
    <string name="btn_signin">Registrarse</string>

    <!-- INICIO DE SESIÓN -->
    <string name="text_login">¡Bienvenido de vuelta! &#x270C;</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_google">Google</string>
    <string name="text_login2">¿Aún no se ha registrado?</string>
    <string name="text_forgot">¿Olvidaste tu contraseña?</string>
    <string name="text_or">O</string>
    <string name="text_welcome">Bienvenido</string>

    <!-- ERRORES -->
    <string name="text_error_empty">Este cmapo no puede estar vacío</string>
    <string name="text_error_email">Ingrese un correo electrónico válido</string>
    <string name="text_error_nouser">No se encuentra ninguna cuenta registrada a este correo</string>
    <string name="text_error_duplicate">Ya existe una cuenta registrada con este correo</string>
    <string name="text_error_credentials">El correo o la contraseña no coinciden</string>
    <string name="text_error_toomany">Demasiados intentos, espere un momento</string>
    <string name="text_error_dontmatches">Las contraseñas no coinciden</string>
    <string name="text_error_passweak">Contraseña debil</string>

    <!-- OTROS -->
    <string name="google_provider">Google</string>
    <string name="email_provider">Email</string>
    <string name="default_prof_pic">https://firebasestorage.googleapis.com/v0/b/task-manager-33cd5.appspot.com/o/User_photos%2Fdefault.jpg?alt=media&amp;token=782ad5ab-2d68-4662-8912-46b7c749ab7b</string>

    <!-- USUARIOS -->
    <string name="status_online">Activo</string>
    <string name="status_offline">Desconectado</string>

    <!-- CONFIGURACIÓN -->
    <string name="change_language">Cambiar idioma</string>
    <string-array name="languages">
        <item name="primer">Idioma</item>
        <item name="fort">Español</item>
        <item name="fort2">Ingles</item>
    </string-array>
    <string name="btn_close">Cerrar Sesión</string>
    <string name="btn_admin">Administrar</string>

    <!-- CHAT -->
    <string name="hint_message">Mensaje</string>
</resources>