<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:fitsSystemWindows="false"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/text_login"
        android:textColor="@color/gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_email"
        style="@style/base_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_password"
        style="@style/base_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_signin3"
        style="@style/base_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/text_login2"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />


    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="@color/main_button"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_google"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

    </View>

    <TextView
        android:id="@+id/textView2"
        style="@style/base_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_or"
        app:layout_constraintBottom_toTopOf="@+id/btn_google"
        app:layout_constraintEnd_toEndOf="@+id/btn_google"
        app:layout_constraintStart_toStartOf="@+id/btn_google" />

    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_google"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

    </View>

    <Button
        android:id="@+id/btn_google"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white2"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/btn_google"
        android:textColor="@color/gray"
        android:textSize="17sp"
        app:icon="@drawable/google_icon"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/text_forgot"
        style="@style/base_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/text_forgot"
        android:textColor="@color/main_button"
        app:layout_constraintEnd_toEndOf="@+id/box_password"
        app:layout_constraintTop_toBottomOf="@+id/box_password" />

    <TextView
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/btn_signin"
        android:textColor="@color/main_button"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/text_signin3"
        app:layout_constraintStart_toStartOf="@+id/text_signin3"
        app:layout_constraintTop_toBottomOf="@+id/text_signin3" />

</androidx.constraintlayout.widget.ConstraintLayout>