<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context=".activities.ui.view.UserSettingsActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/user_settings_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/default_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_settings_name"
        style="@style/user_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="user_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_settings_img" />

    <TextView
        android:id="@+id/textView3"
        style="@style/user_settigns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_language" />

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/languages"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_settings_name" />

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_admin"
        android:textColor="@color/white"
        android:visibility="gone"
        android:backgroundTint="@color/gray_light"
        app:layout_constraintBottom_toTopOf="@+id/btn_close"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_close"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_bg2"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>